# logosai-framework

./: .gitignore  Dockerfile.acp  Dockerfile.api  Dockerfile.web  LICENSE  MANIFEST.in  README.md  docker-compose.yml  install-macos.sh  install-ubuntu.sh  install.sh  pyproject.toml  quickstart.sh  requirements.txt  setup.py
docs/: ACP_PROTOCOL.md  AGENTIC_AI_UPGRADE_PLAN.md  AGENT_ENGINEERING_PLAN.md  BUILDING_ACP_SERVER.md  BUILDING_AGENTIC_AI.md  SSE_BIDIRECTIONAL_DESIGN_V2.md
logosai/: __init__.py  adapters.py  advanced_multi_agent_manager.py  agent.py  agent_bundler.py  agent_collaboration.py  agent_dialogue_manager.py  agent_enhanced.py  agent_negotiation_protocol.py  agent_performance_tracker.py  agent_router.py  agent_selector.py  agent_self_assessment.py  agent_types.py  agent_utils.py  base_agent.py  conversational_agent.py  decorators.py  dialogue_manager.py  dialogue_protocol.py  dynamic_capability_manager.py  llm_agent_registry.py  llm_based_self_assessment.py  multi_agent_trial_manager.py  query_adapter.py  query_optimizer.py  result_based_agent_selector.py  result_quality_evaluator.py  simple_agent.py  task_decomposition_negotiator.py  types.py  visualization.py
logosai/acp/: __init__.py  client.py  server.py  simple_server.py
logosai/agentic/: __init__.py  approval.py  core.py  learning.py  memory.py  planner.py  reasoning.py  tools.py
logosai/agents/: __init__.py  base.py  llm.py  search.py
logosai/cli/: agent.py  main.py  register_agent.py  serve.py
logosai/collaboration/: __init__.py  call_graph.py  models.py  service.py
logosai/config/: __init__.py  agent_config.py  agent_config_templates.json  agent_types.json  agents.json  llm_defaults.py  message_bus_config.json  response_types.json  sdk_config.json  workflow_config.json  workflow_nodes.json  workflow_routing.json  workflow_state.json
logosai/debate/: __init__.py  debate_system.py  voting.py
logosai/desktop/: __init__.py
logosai/desktop/apps/: __init__.py  base.py  gmail.py  kakaotalk.py  notion.py
logosai/desktop/channels/: __init__.py  base.py  discord.py  line.py  slack.py  teams.py  telegram.py
logosai/desktop/platform/: __init__.py  base.py  linux.py  macos.py
logosai/desktop/vision/: __init__.py  peekaboo_client.py  screen_analyzer.py
logosai/evolution/: __init__.py  config.py  detector.py  feedback.py  improver.py  learner.py  system.py  types.py  validator.py
logosai/evolution/safety/: __init__.py  circuit_breaker.py  confidence_gate.py  history_tracker.py
logosai/generation/: __init__.py  function_generator.py  llm_analyzer.py
logosai/market/: __init__.py  gateway.py
logosai/message_bus/: __init__.py  agent_subscription.py  message_bus_impl.py  message_types.py  subscription_manager.py  topic_utils.py
logosai/mixins/: __init__.py  memory.py  multi_agent.py  planning.py  react.py  tool_use.py
logosai/storage/: __init__.py  agent_memory_store.py  local_store.py
logosai/template_engine/: __init__.py  engine.py  loader.py  registry.py  renderer.py  validator.py
logosai/templates/: __init__.py  advanced_agent.py  metadata.json  simple_agent.py
logosai/templates/base/: __init__.py  async_agent.py.jinja2  basic_agent.py.jinja2  workflow_agent.py.jinja2
logosai/templates/integrations/: __init__.py  database_agent.py.jinja2
logosai/templates/patterns/: __init__.py  singleton_agent.py.jinja2
logosai/templates/utilities/: __init__.py
logosai/tools/: __init__.py  builtin.py
logosai/utils/: __init__.py  agent_builder.py  config_loader.py  context_manager.py  guardrails.py  llm_client.py  llm_settings.py  pulse_client.py  retry.py  text_utils.py  trace_span.py
logosai/workflow/: __init__.py  llm_orchestrator.py  models.py  orchestrator.py  query_decomposer.py  simple_workflow.py  workflow_graph.py  workflow_manager.py  workflow_planner.py
samples/: README.md  agents.json  calculator_agent.py  decorator_agent.py  hello_agent.py  quick_llm_example.py  sample_acp_server.py  simple_acp_server.py  simple_hello_agent.py
tests/: test_agent_communication.py  test_agentic_core_fix.py  test_base_class_cleanup.py  test_collaboration.py  test_core_api.py  test_debate.py  test_desktop_library.py  test_embedding_memory.py  test_evolution.py  test_goal_decomposition.py  test_goal_decomposition_v2.py  test_guardrails.py  test_mixin_refactor.py  test_tool_integration.py  test_trace_span.py
