[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logosai"
version = "0.8.1"
description = "A Python framework for building, orchestrating, and evolving AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["ai", "agent", "llm", "multi-agent", "orchestration", "framework"]
authors = [
    {name = "LogosAI Team", email = "info@logosai.info"}
]
maintainers = [
    {name = "LogosAI Team", email = "info@logosai.info"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.25.0",
    "websocket-client>=1.2.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.900",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.2.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-community>=0.0.28",
]
all = [
    "logosai[llm]",
    "tavily-python>=0.3.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/maior/logosai-framework"
Documentation = "https://github.com/maior/logosai-framework#readme"
Repository = "https://github.com/maior/logosai-framework"
Issues = "https://github.com/maior/logosai-framework/issues"

[project.scripts]
logosai-serve = "logosai.cli.serve:main"
logosai-agent = "logosai.cli.agent:main"

[tool.setuptools.packages.find]
include = ["logosai*"]
exclude = ["logosai.examples*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
