[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logosai"
version = "0.12.0"
description = "Build AI agents in 4 lines. Personal AI agent framework — 63+ agents, self-evolving, observable."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["ai", "agent", "llm", "multi-agent", "orchestration", "framework", "self-evolution", "agentic"]
authors = [
    {name = "LogosAI Team", email = "info@logosai.info"}
]
maintainers = [
    {name = "LogosAI Team", email = "info@logosai.info"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.25.0",
    "websocket-client>=1.2.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.900",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "google-genai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-community>=0.0.28",
]
desktop = [
    "pyautogui>=0.9.53",
    "pillow>=9.0.0",
]
all = [
    "logosai[llm]",
    "tavily-python>=0.3.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/maior/logosai-framework"
Documentation = "https://github.com/maior/logosai-framework#readme"
Repository = "https://github.com/maior/logosai-framework"
Issues = "https://github.com/maior/logosai-framework/issues"

[project.scripts]
logosai = "logosai.cli.main:main"
logosai-serve = "logosai.cli.serve:main"
logosai-agent = "logosai.cli.agent:main"

[tool.setuptools.packages.find]
include = ["logosai*"]
exclude = ["logosai.examples*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
